Moved dataset preprocessing to remote sensing core

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ package_dir =
 install_requires =
     torch
     rasterio
+    lit-diffusion @ git+https://github.com/AlexanderLontke/lit-diffusion.git
 
 
 [options.packages.find]
