--- a/configs/ffcv_datasets/ben_ge_60_delta/multilabel/ffcv_ben-ge-validation60-delta.yaml
+++ b/configs/ffcv_datasets/ben_ge_60_delta/multilabel/ffcv_ben-ge-validation60-delta.yaml
@@ -1,3 +1,6 @@
+data_index: &DATA_INDEX "/ds2/remote_sensing/ben-ge/ffcv/write_indices/ben-ge-validation60-delta.csv"
+output_path: &OUTPUT_PATH "/ds2/remote_sensing/ben-ge/ffcv/ben-ge-60-delta-multilabel-validation.beton"
+
 # Modality config
 sentinel_1_modality: &S1_MODALITY
   module: remote_sensing_core.ben_ge.modalities.sentinel_1.Sentinel1Modality
@@ -23,8 +26,8 @@ esa_world_cover_modality: &EWC_MODALITY
   kwargs:
     data_root_path: /ds2/remote_sensing/ben-ge/ben-ge/esaworldcover/npy/
     numpy_dtype: "float32"
-    esa_world_cover_index_path: /netscratch2/nkesseli/master-thesis-benge/src/_master_thesis_benge_supervised_learning/scripts/data-split/data-split-folder-2/ben-ge-train.csv
-    multiclass_label_top_k: 1
+    esa_world_cover_index_path: *DATA_INDEX
+    multiclass_label_top_k: 11
 
 glo_30_dem_modality: &ELEVATION_MODALITY
    module: remote_sensing_core.ben_ge.modalities.glo_30_dem.Glo30DemModality
@@ -49,8 +52,7 @@ climate_zone_modality: &CLIMATE_ZONE_MODALITY
 dataset_config:
   module: remote_sensing_core.ben_ge.ben_ge_dataset.BenGe
   kwargs:
-    data_index_path: /netscratch2/nkesseli/master-thesis-benge/src/_master_thesis_benge_supervised_learning/scripts/data-split/data-split-folder-2/ben-ge-s-train.csv
-    #/ds2/remote_sensing/ben-ge/ben-ge/data-index/ben-ge-train.csv
+    data_index_path: *DATA_INDEX
     sentinel_1_2_metadata_path: /ds2/remote_sensing/ben-ge/ben-ge/ben-ge_meta.csv
     sentinel_1_modality: *S1_MODALITY
     season_s1_modality: *SEASON_S1
@@ -60,3 +62,61 @@ dataset_config:
     glo_30_dem_modality: *ELEVATION_MODALITY
     era_5_modality: *ERA5MODALITY
     climate_zone_modality: *CLIMATE_ZONE_MODALITY
+    output_as_tuple: True
+
+# FFCV Config
+numpy_dtype: &NP_DT
+  module: numpy.dtype
+  args: [ "float32" ]
+
+ffcv_writer_config:
+  module: ffcv.writer.DatasetWriter
+  kwargs:
+    fname: *OUTPUT_PATH
+    num_workers: 8
+    fields: # Needs to be alphabetically ordered to fit tuple order of data set, except for field names which is always at the end
+      climate_zone:
+        module: ffcv.fields.FloatField
+      elevation_difference_label:
+        module: ffcv.fields.FloatField
+      era_5:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [ 9 ]
+      esa_worldcover:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [ 120, 120 ]
+      glo_30_dem:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [ 3, 120, 120 ]
+      multiclass_numeric_label:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [ 11 ]
+      multiclass_one_hot_label:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [ 11 ]
+      season_s1:
+        module: ffcv.fields.FloatField
+      season_s2:
+        module: ffcv.fields.FloatField
+      sentinel_1:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [ 2, 120, 120 ]
+      sentinel_2:
+        module: ffcv.fields.NDArrayField
+        kwargs:
+          dtype: *NP_DT
+          shape: [12, 120, 120]
+      field_names:
+        module: ffcv.fields.JSONField
